Realized pattern DTO